; ModuleID = '/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-data.c_pmemcached_store.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-data.c_pmemcached_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_pmemcached_store = type { i32, i32, i32, i32, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pmemcached_store(%struct.lev_pmemcached_store* %0) #0 {
  %2 = alloca %struct.lev_pmemcached_store*, align 8
  store %struct.lev_pmemcached_store* %0, %struct.lev_pmemcached_store** %2, align 8
  %3 = load %struct.lev_pmemcached_store*, %struct.lev_pmemcached_store** %2, align 8
  %4 = getelementptr inbounds %struct.lev_pmemcached_store, %struct.lev_pmemcached_store* %3, i32 0, i32 5
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.lev_pmemcached_store*, %struct.lev_pmemcached_store** %2, align 8
  %7 = getelementptr inbounds %struct.lev_pmemcached_store, %struct.lev_pmemcached_store* %6, i32 0, i32 4
  %8 = load i64, i64* %7, align 8
  %9 = call i32 @cache_load(i64 %5, i64 %8, i32 0)
  %10 = load %struct.lev_pmemcached_store*, %struct.lev_pmemcached_store** %2, align 8
  %11 = getelementptr inbounds %struct.lev_pmemcached_store, %struct.lev_pmemcached_store* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = and i32 %12, 3
  %14 = load %struct.lev_pmemcached_store*, %struct.lev_pmemcached_store** %2, align 8
  %15 = getelementptr inbounds %struct.lev_pmemcached_store, %struct.lev_pmemcached_store* %14, i32 0, i32 5
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.lev_pmemcached_store*, %struct.lev_pmemcached_store** %2, align 8
  %18 = getelementptr inbounds %struct.lev_pmemcached_store, %struct.lev_pmemcached_store* %17, i32 0, i32 4
  %19 = load i64, i64* %18, align 8
  %20 = add nsw i64 %16, %19
  %21 = load %struct.lev_pmemcached_store*, %struct.lev_pmemcached_store** %2, align 8
  %22 = getelementptr inbounds %struct.lev_pmemcached_store, %struct.lev_pmemcached_store* %21, i32 0, i32 3
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.lev_pmemcached_store*, %struct.lev_pmemcached_store** %2, align 8
  %25 = getelementptr inbounds %struct.lev_pmemcached_store, %struct.lev_pmemcached_store* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = load %struct.lev_pmemcached_store*, %struct.lev_pmemcached_store** %2, align 8
  %28 = getelementptr inbounds %struct.lev_pmemcached_store, %struct.lev_pmemcached_store* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @pmemcached_store_current(i32 %13, i64 %20, i32 %23, i32 %26, i32 %29)
  ret i32 %30
}

declare dso_local i32 @cache_load(i64, i64, i32) #1

declare dso_local i32 @pmemcached_store_current(i32, i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
